    * Remove Net::SSLeay#ssl_session field.
    * Remove Net::SSLeay#session_reused method.
    * Remove Net::SSLeay#get1_session method.
    * Remove Net::SSLeay#set_session method.
    * Remove Net::SSLeay::SSL_SESSION class.
    * Remove Net::SSLeay#load_error_strings method.
    * Net::SSLeay#get_SSL_CTX returns a new object.
    * Remove Net::SSLeay#get_tlsext_status_type method.
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get0_alpn_selected method.
    * Fix bugs of Net::SSLeay#get0_next_proto_negotiated method.
    
0.026 2024-12-11
  [Incompatibe Changes]
    * Remove X509#get_ocsp_uri method.
    * Remove all OCSP related classes.
    * Remove all OCSP related methods in Net::SSLeay::DER class.
0.025 2024-12-10
  [New Features]
    * Add Net::SSLeay::Error::PEM_R_NO_START_LINE class.
    * Add Net::SSLeay::SSL_CTX#get_mode method.
    * Add Net::SSLeay::Constant#SSL_MODE_SEND_FALLBACK_SCSV method.
    * Add Net::SSLeay::Callback::Verify class.
    * Add $verify_callback argument to Net::SSLeay::SSL_CTX#set_verify method.
  [Changes]
    * Every Net::SSLeay::PEM#read_* method throwns an exception with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error::PEM_R_NO_START_LINE|SPVM::Net::SSLeay::Error::PEM_R_NO_START_LINE> class if the error is PEM_R_NO_START_LINE.
  [Incompatibe Changes]
    * Rename Net::SSLeay::Callback::PemPasswd class to Net::SSLeay::Callback::PemPassword class.
    * Remove Net::SSLeay::SSL_CTX#set_tmp_dh method because the corresponding native function is deprecated and set1_groups_list eixsts.
    * Remove Net::SSLeay::SSL_CTX#set_tmp_ecdh method because the corresponding native function is deprecated and set1_groups_list eixsts.
    * Remove Net::SSLeay::SSL_CTX#set1_curves_list method because set1_groups_list eixsts.
    * Remove Net::SSLeay::SSL_METHOD#SSLv23_method method because TSL_method eixsts.
    * Remove Net::SSLeay::SSL_METHOD#SSLv23_client_method method because TSL_client_method eixsts.